@@ -44,6 +44,8 @@ Client library:
 - Break out of select() on publish(), subscribe() etc. when using the threaded
   interface. Fixes bug #1270062.
 - Handle incoming and outgoing messages separately. Fixes bug #1263172.
+- Don't terminate threads on mosquitto_destroy() when a client is not using
+  the threaded interface but does use their own thread. Fixes bug #1291473.
 
 Clients:
 - Add --ciphers to allow specifying which TLS ciphers to support.
